--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-qunit": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-closure-tools": "~0.8.3"
   }
 }
