--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-
+[submodule "third_party/closure-compiler"]
+	path = third_party/closure-compiler
+	url = https://github.com/benvanik/google-closure-compiler-bin.git
 [submodule "third_party/closure-library"]
-  path = third_party/closure-library
-    url = https://code.google.com/p/closure-library/
+	path = third_party/closure-library
+	url = https://code.google.com/p/closure-library/
