--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/benvanik/google-closure-compiler-bin.git
 [submodule "third_party/closure-library"]
 	path = third_party/closure-library
-	url = https://code.google.com/p/closure-library/
+	url = https://github.com/google/closure-library/
 [submodule "third_party/closure-linter"]
 	path = third_party/closure-linter
 	url = https://github.com/knutwalker/google-closure-linter.git
