Trying to use a different npm library

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ tmtags
 .project
 .metadata
 
+.idea
+
 # ==============================================================================
 # Temp generated code
 # ==============================================================================
