--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "grunt-contrib-qunit": "~0.2.2",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
-    "jasmine": "^3.5.0",
-    "jasmine-core": "^3.5.0",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-closure": "^0.1.3",
-    "karma-jasmine": "^3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-spec-reporter": "0.0.32"
+    "jasmine": "~3.5.0",
+    "jasmine-core": "~3.5.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-closure": "~0.1.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "~1.5.4",
+    "karma-spec-reporter": "~0.0.32"
   }
 }
