--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "data-layer-helper",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-closure-tools": "^1.0.0",
-    "grunt-contrib-qunit": "~0.2.2",
-    "grunt-contrib-watch": "~0.4.4"
+    "grunt": "~1.0.4",
+    "grunt-contrib-qunit": "~4.0.0"
   },
   "dependencies": {
-    "google-closure-compiler": "^20200614.0.0",
-    "google-closure-library": "^20200614.0.0"
+    "google-closure-compiler": "~20200614.0.0",
+    "google-closure-library": "~20200614.0.0"
   }
 }
