Remove this warnings in jasmine

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "closure"
   ],
   "rules": {
-    "prefer-rest-params": "off"
+    "prefer-rest-params": "off", // We don't want this, adds a polyfill
+    "no-invalid-this": "off" // works incorrectly with jasmine
   }
 }
