--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "data-layer-helper",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~1.0.4",
-    "grunt-contrib-qunit": "~4.0.0",
     "eslint": "~7.3.1",
     "eslint-config-closure-es6": "~0.1.1",
     "eslint-config-google": "~0.14.0",
     "eslint-plugin-jasmine": "~4.1.1",
+    "grunt": "~1.0.4",
+    "grunt-closure-tools": "^1.0.0",
+    "grunt-contrib-qunit": "~4.0.0",
     "jasmine": "~3.5.0",
     "jasmine-core": "~3.5.0",
     "karma": "~5.1.0",
