Started writing registerProcessor method

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "closure"
   ],
   "rules": {
-    "prefer-rest-params": "off"
+    "prefer-rest-params": "off",
+    "prefer-spread": "off"
   }
 }
