I think that using 'this' is a more messy than helpful so I removed it

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
     "closure"
   ],
   "rules": {
-    "prefer-rest-params": "off", // We don't want this, adds a polyfill
-    "no-invalid-this": "off" // works incorrectly with jasmine
+    "prefer-rest-params": "off" // We don't want this, adds a polyfill
   }
 }
