--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es6": true,
-    "jasmine": true
+    "jasmine": true,
+    "node": true
   },
   "extends": [
     "closure-es6",
