--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,11 @@
     "closure"
   ],
   "rules": {
-    "prefer-rest-params": "off"
+    "prefer-rest-params": "off",
+    // This library requires this to be used in methods as part of the API,
+    // and sometimes it's useful to reference this in jasmine as there is
+    // special handling.
+    "no-invalid-this": "off",
+    "indent": "off" // contradicts closure/indent
   }
 }
