--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-closure": "~0.1.3",
+    "karma-firefox-launcher": "~1.3.0",
     "karma-googmodule-preprocessor": "~1.0.1",
+    "karma-ie-launcher": "~1.0.0",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "~1.5.4",
     "karma-spec-reporter": "~0.0.32"
