This should work but no IE

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ before_script:
 addons:
   firefox: latest
   chrome: stable
+dist: xenial
+services:
+  - xvfb
 os:
-  - windows
   - linux
   - osx
 script: grunt
