--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "data-layer-helper",
-  "version": "0.1.0",
+  "description": "A utility to help many vendors manage the data layer of an application.",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "grunt",
+    "unit": "karma start",
+    "integration": "karma start test/integration/karma.conf.js"
+  },
   "devDependencies": {
     "eslint": "~7.3.1",
     "eslint-config-closure-es6": "~0.1.1",
     "eslint-config-google": "~0.14.0",
     "eslint-plugin-jasmine": "~4.1.1",
-    "grunt": "~1.0.4",
+    "grunt": "~1.2.1",
     "grunt-closure-tools": "~1.0.0",
     "grunt-karma": "~4.0.0",
     "jasmine": "~3.5.0",
@@ -26,5 +32,20 @@
   "dependencies": {
     "google-closure-compiler": "~20200614.0.0",
     "google-closure-library": "~20200614.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/google/data-layer-helper"
+  },
+  "keywords": [
+    "javascript",
+    "tool",
+    "utility",
+    "queue",
+    "message",
+    "data",
+    "layer",
+    "datalayer"
+  ],
+  "license": "Apache-2.0"
 }
