Move exported functions from helper into another file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "eslint-config-closure-es6": "~0.1.1",
     "eslint-config-google": "~0.14.0",
     "eslint-plugin-jasmine": "~4.1.1",
-    "grunt": "^1.2.1",
+    "grunt": "~1.2.1",
     "grunt-closure-tools": "~1.0.0",
     "grunt-karma": "~4.0.0",
     "jasmine": "~3.5.0",
@@ -24,7 +24,7 @@
     "karma-spec-reporter": "~0.0.32"
   },
   "dependencies": {
-    "google-closure-compiler": "~20200614.0.0",
-    "google-closure-library": "~20200614.0.0"
+    "google-closure-compiler": "~20200719.0.0",
+    "google-closure-library": "~20200628.0.0"
   }
 }
